appId: com.callstack.reactnativepaperexample
# tc Page view section is active
---
- openLink: exp://192.168.1.15:19000
- scrollUntilVisible:
    element: "Searchbar"
    direction: DOWN
- tapOn: "Searchbar"
- scrollUntilVisible:
    element: "View mode"
    direction: DOWN
- tapOn:
    id: "search-bar"
    index: 7
- assertVisible: "Search"
- inputText: "&^%$#@!£@!#%^&*(&^%^$%#@aaę"
- assertVisible: "&^%$#@!£@!#%^&*(&^%^$%#@aaę"
# - tapOn:
#     id: "icon-button"
#     index: 9
- tapOn:
    id: "search-bar"
    index: 8
- assertVisible: "Search without bottom line"
- tapOn:
    id: "search-bar"
    index: 8
- inputText: "Paperę@1"
- assertVisible: "Paperę@1"
- tapOn:
    id: "search-bar"
    index: 9
- assertVisible: "Loading"
- inputText: "744111111151616465465161313135+95+959594656686523265698652323268"
- assertVisible: "744111111151616465465161313135+95+959594656686523265698652323268"
- tapOn: "Back"
- scrollUntilVisible:
    element: "Animated Floating Action Button"
    direction: UP